# Hangman-Game

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  \  flake.nix  shell.nix
ascii/: hangman-0.txt  hangman-1.txt  hangman-2.txt  hangman-3.txt  hangman-4.txt  hangman-5.txt  hangman-6.txt
includes/: challenge_word.h  game.h  get-word.h  guess_buffer.h  main.h  print_hello_world.h
make/: boilerplate.mk  clang.mk  cmake.mk  core.mk  git.mk  local.mk
src/: Makefile  get-word.c  guess_buffer-create_guess_buffer.c  guessing-buffer.c  hello-world.c  main.c  main.cpp
src/challenge_word/: ask_for_challenge_word.c  ask_for_challenge_word.cpp  challenge_word_length.c  check_char_inside_challenge_word.c  check_char_inside_challenge_word.cpp  get_challenge_word_length.cpp
src/game/: check_loss.c  check_loss.cpp  check_win.cpp  clear_screen.cpp  discard_rest_of_input.c  discard_rest_of_input.cpp  print_status.c  print_status.cpp  show_hangman.c  show_hangman.cpp
src/guess_buffer/: create_guess_buffer.c  create_guess_buffer.cpp  take_guess.c  take_guess.cpp  unlock_guest_buffer.cpp
